@@ -4,6 +4,7 @@
     &#8226; View pictures from twitters native client in direct messages<br/>
     &#8226; Share your pictures from the photo viewer dialog to any apps<br/>
     &#8226; Background sync of your second account's DM's<br/>
+    &#8226; High quality profile pictures<br/>
     &#8226; Some rotation fixes<br/>
     &#8226; Character counter on the scheduled tweets<br/>
     &#8226; Better backup of settings<br/>
